# docker-compose-celery

./: Dockerfile  README.md  README_HPA.md  app.py  docker-compose.final.yml  docker-compose.rabbitmq.yml  docker-compose.redis.yml  main.py  pyproject.toml  worker.py
k8s/: 01_rabbitmq.yaml  02_redis.yaml  03_api.yml  04_worker.yml  05_front.yaml  06_keda-autoscaler.yaml  07_flower.yaml
