[project]
name = "docker-compose-celery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.2",
    "fastapi>=0.135.1",
    "flower>=2.0.1",
    "pika>=1.3.2",
    "redis>=7.2.1",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
]
